--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>{% block title %} {{ title }} {% endblock %}</title>
         {% block stylesheets %} 
-            <link rel="stylesheet" href="{{ asset('css/style.css') }} ">
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         {% endblock %}
     </head>
     <body>
@@ -24,14 +24,23 @@
                         </div>
                         <div class="user-parameters--active">
                             <p>{{ app.user.email}}</p>
-                            <div></div>
-                            <li><a href="{{ path('myAccount', {'userId': app.user.id}) }}">Mon compte</a></li>
-                            <li><a href="{{ path("reservationsList", {'userId': app.user.id}) }}">Mes réservations</a></li>
+                            <div class="each-parameter">
+                                <a href="{{ path('myAccount', {'userId': app.user.id}) }}"><i class="fas fa-user-circle"></i> Mon compte</a>
+                            </div>
+                            <div class="each-parameter">
+                                <li><a href="{{ path("reservationsList", {'userId': app.user.id}) }}"><i class="fas fa-ticket-alt"></i> Mes réservations</a></li>
+                            </div>
                             {% if app.user and app.user.role == 'Organizer' %}
-                                <li><a href="{{ path("myConcertsList", {'userId' : app.user.id}) }}">Mes concerts</a></li>
-                                <li><a href="{{ path("createConcert")}}">Créer un concert</a></li>
+                                <div class="each-parameter">
+                                    <li><a href="{{ path("myConcertsList", {'userId' : app.user.id}) }}"><i class="far fa-list-alt"></i> Mes événements</a></li>
+                                </div>
+                                <div class="each-parameter">
+                                    <li><a href="{{ path("createConcert")}}"><i class="far fa-calendar-plus"></i> Créer un événement</a></li>
+                                </div>
                             {% endif %}
-                            <li><a href="{{ path("logout") }}">Déconnexion</a></li>
+                            <div class="each-parameter">
+                                <li><a href="{{ path("logout") }}"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
+                            </div>
                         </div>
                     {% else %}
                         <div class="header__login">
@@ -53,6 +62,8 @@
     </div>
     {% block javascripts %}
         <script src="{{ asset('js/UserMenu.js') }}"></script>
-        <script src="{{ asset('js/MyEvents.js') }}"></script>
+        <script src="{{ asset('js/StatusFilter.js') }}"></script>
+        <script src="{{ asset('js/EventsSearchList.js') }}"></script>
+        <script src="{{ asset('js/BlocksTransitionShowEvent.js') }}"></script>
     {% endblock %}
 </html>
