--- a/templates/concerts/concertsList.html.twig
+++ b/templates/concerts/concertsList.html.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-  <div class="events-list-block main">
-    <section>
-      <div class="search-event-block">
+  <section>
+    <div class="search-event-block" style="background-image:url('{{ asset('images/events-background.jpg') }}')">
+      <div class="search-event-block__content">
         <div class="title">
           <h2>Trouvez un événement près de chez vous !</h2>
         </div>
@@ -20,47 +20,46 @@
               }) 
             }}
             <i class="fas fa-search"></i>
-
           {{ form_end(concertsSearchForm) }}</p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section>
-      {% if query %}
-        <div class="all-events">
-          {% if concerts %}
-            {% for concert in concerts %} 
-              <div class="each-event">
-                {% if concert.imagePath %}
-                  <div class="each-event__image">
-                    <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
-                    <img src="/images/concerts_img/{{concert.imagePath}}" alt="{{concert.name}}" width="200">
-                    </a>
-                  </div>
-                {% endif %}
-                <div class="each-event-content">
+  <section>
+    {% if query %}
+      <div class="main query">
+        {% if concerts %}
+          {% for concert in concerts %} 
+            <div class="each-block each-event">
+              {% if concert.imagePath %}
+                <div class="each-event__image">
                   <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
-                  <div class="each-event-content__ title">
-                    <h2>{{ concert.name }}</h2>
-                    <div class="each-event-content__ title--line"></div>
-                  </div>
-                  {% if concert.reservation >= concert.maxPlaces %}
-                      <div id="full-reservations"><p><span id="full-reservations">COMPLET</span></p></div>
-                  {% endif %}
-                  <div class="each-event-content___infos"></div>
-                  <p>Date : {{ concert.date | date('d/m/Y') }}</p>
-                  <p>Lieu : {{ concert.adress }}, {{ concert.city }}</p>
+                  <img src="/images/concerts_img/{{concert.imagePath}}" alt="{{concert.name}}" width="200">
                   </a>
                 </div>
+              {% endif %}
+              <div class="each-event-content">
+                <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
+                <div class="each-event-content__ title">
+                  <h2>{{ concert.name }}</h2>
+                  <div class="each-event-content__ title--line"></div>
+                </div>
+                {% if concert.reservation >= concert.maxPlaces %}
+                    <div id="full-reservations"><p><span id="full-reservations">COMPLET</span></p></div>
+                {% endif %}
+                <div class="each-event-content___infos"></div>
+                <p><i class="far fa-calendar-alt"></i> {{ concert.date | date('d/m/Y') }}</p>
+                <p><i class="fas fa-map-marker-alt"></i> {{ concert.adress }}, {{ concert.city }}</p>
+                </a>
               </div>
-            {% endfor %}
-          {% else %}
+            </div>
+          {% endfor %}
+        {% else %}
             <p>Il n'y a aucun concert prévu</p>
-          {% endif %}
-        </div>
-      {% endif %}
-    </section>
-  </div>
+        {% endif %}
+      </div>
+    {% endif %}
+  </section>
 
 {% endblock %}
