--- a/templates/concerts/confirmChangeDate.html.twig
+++ b/templates/concerts/confirmChangeDate.html.twig
@@ -10,12 +10,20 @@
     <section><div class="main">
         {% set confirmToken = csrf_token(concert.id) %}
 
+        <div class="title">
+            <h2>Confirmation</h2>
+            <div class="title--line"></div>
+        </div>
+
         <h3>{{concert.name}}</h3>
 
         <p><strong>Voulez-vous vraiment reporter cet événément au {{ newDate | date('d/m/Y à H:i') }}</strong> ? <br />
         Un mail informatif sera envoyé à toutes les personnes ayant une réservation pour cet événement</p>
-        <p><a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" value="Retour"></a>
-        <a href="{{ path('changeDate', {'id': concert.id, 'organizerToken': organizerToken, 'newDate': newDate, 'confirmToken': confirmToken}) }}"><input type="button" value="Confirmer"></a></p>
+
+        <div class="btn-block">
+            <p><a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" class="btn" value="Retour"></a>
+            <a href="{{ path('changeDate', {'id': concert.id, 'organizerToken': organizerToken, 'newDate': newDate, 'confirmToken': confirmToken}) }}"><input type="button" class="btn" value="Confirmer"></a></p>
+        </div>
     </section></div>
 
 {% endblock %}
