--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,15 +1,13 @@
 {% extends 'base.html.twig' %}
 
-
-
-
 {% block body %}
 
 {% if not app.user %}
-    <section><div class="login-block">
-        <div class="login-block__ title">
+    <section>
+    <div class="login-block">
+        <div class="title">
             <p>Inscription</p>
-            <div class="login-block__ title--line"></div>
+            <div class="title--line"></div>
         </div>
         <div class="login-block__form">
             {{ form_start(registerForm) }}
@@ -18,7 +16,7 @@
                     'required': 'true', 
                     'label': ' ', 
                     'attr': {
-                        'placeholder': "E-mail" 
+                        'placeholder': "Adresse e-mail" 
                         } 
                     }) 
                 }}</p>
@@ -40,8 +38,10 @@
                 }}</p>
                 <input type="submit" value="Envoyer">
             {{ form_end(registerForm) }}
+            <p><a href="{{ path('login') }}">J'ai déjà un compte</a></p>
         </div>
-    </div></section>
+    </div>
+    </section>
 {% else %}
     <p>Vous êtes déjà inscrit.</p>
 {% endif %}
